Added the room scanner messages. Updated the controller to allow stop, and behave better for updates

--- a/catkin_ws/src/cupinator/CMakeLists.txt
+++ b/catkin_ws/src/cupinator/CMakeLists.txt
@@ -47,6 +47,9 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
    FILES
    CtrlCommand.msg
+   CtrlStatus.msg
+   RoomScannerCommand.msg
+   RoomScannerResult.msg
 )
 
 ## Generate services in the 'srv' folder
