--- a/catkin_ws/src/cupinator/package.xml
+++ b/catkin_ws/src/cupinator/package.xml
@@ -2,12 +2,22 @@
 <package>
   <name>cupinator</name>
   <version>1.0.0</version>
-  <description>Cupinator - for all your cup finding needs</description>
+  <description>
+      Cupinator - for all your cup finding needs
+
+      Topics:
+      /cupinator
+        /ctrl/command - send commands to the controller node
+        /ctrl/status - publish changes in the controller node
+        /room_scanner/command - send commands to the scanner
+        /room_scanner/status - status updates from the room scanner
+
+  </description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="barsinam@cs.bgu.ac.il">Michael</maintainer>
+  <maintainer email="barsinam@post.bgu.ac.il">Michael</maintainer>
   <maintainer email="llutan@cs.bgu.ac.il">Lior</maintainer>
   <maintainer email="maorash@cs.bgu.ac.il">Maor</maintainer>
 
@@ -18,14 +28,14 @@
   <license>CSBGU</license>
 
 
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
+  <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
   <!-- <url type="website">http://wiki.ros.org/cupinator</url> -->
 
 
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
+  <!-- Author tags are optional, multiple are allowed, one per tag -->
+  <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
