--- a/catkin_ws/src/cupinator/CMakeLists.txt
+++ b/catkin_ws/src/cupinator/CMakeLists.txt
@@ -54,7 +54,7 @@ add_message_files(
    RoomScannerResult.msg
    WalkCommand.msg
    WalkResult.msg
-   SnapshotData.msg
+   AggregationData.msg
    Contour.msg
 )
 
@@ -63,6 +63,7 @@ add_service_files(
   FILES
   CtrlQuery.srv
   SingleCupRecQuery.srv
+  CupRecQuery.srv
 )
 
 ## Generate actions in the 'action' folder
